[package]
name = "UnlockRS"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["rt", "sync", "time", "macros", "rt-multi-thread"]}


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[features]
simulation_mode = []
default = []
