[package]
name = "UnlockRS"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
rand = "0.8.5"
crossterm = { version = "*", optional = true }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "game"
path = "src/game.rs"


[features]
simulation_mode = ["crossterm"]
default = ["simulation_mode"]
